Add endpoint for worker
