# storage/api-docs/api-docs.json
@@ -32,33 +32,6 @@
                         "description": "Successful operation"
                     }
                 }
-            },
-            "post": {
-                "tags": [
-                    "Categories"
-                ],
-                "summary": "Create a new category",
-                "description": "Returns created category",
-                "operationId": "App\\Http\\Controllers\\Api\\CategoryController::store",
-                "parameters": [
-                    {
-                        "name": "request",
-                        "in": "path",
-                        "description": "request all data",
-                        "required": true
-                    }
-                ],
-                "responses": {
-                    "201": {
-                        "description": "Successful operation"
-                    },
-                    "400": {
-                        "description": "Bad Request"
-                    },
-                    "401": {
-                        "description": "Unauthenticated"
-                    }
-                }
             }
         },
         "/category/{id}": {
@@ -91,61 +64,19 @@
                         "description": "Unauthenticated"
                     }
                 }
-            },
-            "put": {
+            }
+        },
+        "/worker/incidence": {
+            "get": {
                 "tags": [
-                    "Categories"
+                    "Incidences Worker"
                 ],
-                "summary": "Update a category",
-                "description": "Returns updated category",
-                "operationId": "App\\Http\\Controllers\\Api\\CategoryController::update",
-                "parameters": [
-                    {
-                        "name": "id",
-                        "in": "path",
-                        "description": "Category id",
-                        "required": true,
-                        "schema": {
-                            "type": "integer"
-                        }
-                    }
-                ],
+                "summary": "Get all incidences of workers",
+                "description": "Returns the incedence",
+                "operationId": "App\\Http\\Controllers\\Api\\IncidenceController::indexWorkers",
                 "responses": {
                     "200": {
                         "description": "Successful operation"
-                    },
-                    "400": {
-                        "description": "Bad Request"
-                    },
-                    "401": {
-                        "description": "Unauthenticated"
-                    }
-                }
-            },
-            "delete": {
-                "tags": [
-                    "Categories"
-                ],
-                "summary": "Delete a category",
-                "description": "Returns Json response",
-                "operationId": "App\\Http\\Controllers\\Api\\CategoryController::destroy",
-                "parameters": [
-                    {
-                        "name": "id",
-                        "in": "path",
-                        "description": "Category id",
-                        "required": true,
-                        "schema": {
-                            "type": "integer"
-                        }
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "Successful operation"
-                    },
-                    "400": {
-                        "description": "Bad Request"
                     },
                     "401": {
                         "description": "Unauthenticated"
@@ -186,7 +117,7 @@
             },
             "put": {
                 "tags": [
-                    "Incidences"
+                    "Incidences Worker"
                 ],
                 "summary": "Update a incidence",
                 "description": "Returns updated incidence, this endpoint is for worker app",
@@ -196,36 +127,6 @@
                         "name": "id",
                         "in": "path",
                         "description": "incidence id",
-                        "required": true,
-                        "schema": {
-                            "type": "integer"
-                        }
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "Successful operation"
-                    },
-                    "400": {
-                        "description": "Bad Request"
-                    },
-                    "401": {
-                        "description": "Unauthenticated"
-                    }
-                }
-            },
-            "delete": {
-                "tags": [
-                    "Incidences"
-                ],
-                "summary": "Delete a incidence",
-                "description": "Returns Json response",
-                "operationId": "App\\Http\\Controllers\\Api\\IncidenceController::destroy",
-                "parameters": [
-                    {
-                        "name": "id",
-                        "in": "path",
-                        "description": "Incidence id",
                         "required": true,
                         "schema": {
                             "type": "integer"
